# ibkr_quant_system

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  README_FORMAL.md  audit.db  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
config/: account_profiles.yaml  adaptive_strategy_framework.yaml  baseline.yaml  ibkr.yaml  ibkr_asx.yaml  ibkr_asx_live.yaml  ibkr_cn.yaml  ibkr_cn_live.yaml  ibkr_hk.yaml  ibkr_hk_live.yaml  ibkr_hk_probe.yaml  ibkr_us.yaml  ibkr_us_live.yaml  ibkr_xetra.yaml  ibkr_xetra_live.yaml  investment.yaml  investment_asx.yaml  investment_cn.yaml  investment_execution.yaml  investment_execution_asx.yaml  investment_execution_hk.yaml  investment_execution_us.yaml  investment_execution_us_overnight.yaml  investment_execution_xetra.yaml  investment_guard.yaml  investment_guard_asx.yaml  investment_guard_hk.yaml  investment_guard_us.yaml  investment_guard_us_overnight.yaml  investment_hk.yaml  investment_opportunity.yaml  investment_opportunity_asx.yaml  investment_opportunity_hk.yaml  investment_opportunity_us.yaml  investment_opportunity_us_overnight.yaml  investment_opportunity_xetra.yaml  investment_paper.yaml  investment_paper_hk.yaml  investment_paper_us.yaml  investment_paper_us_overnight.yaml  (+36 more)
docs/: acm_rs_strategy_spec.md  architecture_overview.md  change_archive_2026-04-28_dashboard_gateway_no_trade.md  change_archive_2026-04-28_pr_branch_cleanup.md  change_archive_2026-04-29_alert_error_classification.md  change_archive_2026-04-29_candidate_model_review.md  change_archive_2026-04-29_candidate_only_evidence.md  change_archive_2026-04-29_gateway_runtime_state.md  change_archive_2026-04-29_pure_strategy_no_trade_tests.md  change_archive_2026-04-29_strategy_parameter_registry.md  change_archive_2026-04-29_weekly_support_import_boundary.md  change_archive_2026-04-30_dashboard_client_disconnect.md  change_archive_2026-04-30_dashboard_evidence_action_summary.md  change_archive_2026-04-30_evidence_artifact_health_contracts.md  change_archive_2026-04-30_investment_evidence_contract.md  change_archive_2026-04-30_supervisor_startup_visibility.md  change_archive_2026-04-30_weekly_evidence_json_artifacts.md  change_archive_2026-05-01_dashboard_evidence_action_labels.md  change_archive_2026-05-01_dashboard_evidence_action_top_level.md  change_archive_2026-05-01_evidence_action_rationale.md  change_archive_2026-05-01_evidence_focus_actions.md  change_archive_2026-05-01_evidence_focus_ops_health.md  change_archive_2026-05-01_evidence_focus_ops_v2_metrics.md  change_archive_2026-05-01_evidence_focus_summary.md  change_archive_2026-05-01_evidence_focus_v2_block.md  change_archive_2026-05-01_evidence_focus_v2_primary_summary.md  change_archive_2026-05-01_market_evidence_action_summary.md  change_archive_2026-05-01_market_evidence_v2_block_metrics.md  change_archive_2026-05-01_portfolio_scoped_evidence_action.md  change_archive_2026-05-01_simple_dashboard_evidence_action.md  change_archive_2026-05-01_simple_market_evidence_actions.md  change_archive_2026-05-05_artifact_health_weekly_fallback_contracts.md  change_archive_2026-05-06_evidence_focus_action_lifecycle.md  change_archive_2026-05-08_blocked_vs_allowed_action_mapping.md  change_archive_2026-05-08_dashboard_v2_information_architecture.md  change_archive_2026-05-08_evidence_control_audit_linkage.md  change_archive_2026-05-08_evidence_focus_effectiveness.md  change_archive_2026-05-08_strategy_config_pure_signal_regression.md  (+105 more)
src/: main.py
(+279 files in other folders)
